# SJDXQcourseware

./: LICENSE  README.md
programs/: README.md
programs/WME/third/CSL/: csl-base.cmk  csl-main.cmk
programs/WME/third/CSL/include/: cslbase.h  cslrdp.h  cslsys.h  cslwmark.h
programs/WME/third/fltk/: README.md  fltk.cmk
programs/WME/wme1/: README.md
programs/WME/wme1/WmEditor/: CMakeLists.txt  precomp.cpp
programs/WME/wme1/WmEditor/src/: main.cpp
programs/WME/wme1/WmEditor/src/app/: TextApp.cpp  TextApp.h
programs/WME/wme1/WmEditor/src/common/: TextDef.h
programs/WME/wme1/WmEditor/src/model/: TextModel.cpp  TextModel.h
programs/WME/wme1/WmEditor/src/view/: TextEditor.cpp  TextEditor.h
programs/WME/wme1/WmEditor/src/viewmodel/: TextViewModel.cpp  TextViewModel.h
programs/WME/wme1/WmEditor/src/window/: MainWindow.cpp  MainWindow.h  ReplaceDialog.cpp  ReplaceDialog.h
programs/WME/wme2/: CMakeLists.txt  README.md
programs/WME/wme2/WmEditor/: CMakeLists.txt  precomp.h
programs/WME/wme2/WmEditor/src/: main.cpp
programs/WME/wme2/WmEditor/src/app/: CfgPart.cpp  CfgPart.h  ReplacePart.cpp  ReplacePart.h  TextApp.cpp  TextApp.h  TextPart.cpp  TextPart.h
programs/WME/wme2/WmEditor/src/app/commands/: CloseReplaceCommand.cpp  ConfigCommand.cpp  ReplaceCommand.cpp
programs/WME/wme2/WmEditor/src/common/: TextDef.h
programs/WME/wme2/WmEditor/src/model/: CfgModel.cpp  CfgModel.h  TextModel.cpp  TextModel.h
programs/WME/wme2/WmEditor/src/model/base/: RgbColor.h
programs/WME/wme2/WmEditor/src/view/: TextEditor.cpp  TextEditor.h
programs/WME/wme2/WmEditor/src/viewmodel/: CfgViewModel.cpp  CfgViewModel.h  TextViewModel.cpp  TextViewModel.h
programs/WME/wme2/WmEditor/src/viewmodel/commands/: LoadCommand.cpp  SaveCommand.cpp  SetBackColorCommand.cpp
programs/WME/wme2/WmEditor/src/viewmodel/notifications/: CfgViewModelNotification.cpp  TextViewModelNotification.cpp
programs/WME/wme2/WmEditor/src/window/: CfgDialog.cpp  CfgDialog.h  MainWindow.cpp  MainWindow.h  ReplaceDialog.cpp  ReplaceDialog.h
programs/WME/wme2/WmEditor/src/window/notifications/: MainWindowNotification.cpp  ReplaceDialogNotification.cpp
programs/WME/wme2/doc/: part.md
programs/demo/: README.md
programs/demo/Bus/code/: CMakeLists.txt
programs/demo/Bus/code/BusMap/: CMakeLists.txt  precomp.h
programs/demo/Bus/code/BusMap/rc/: BusMap.rc
programs/demo/Bus/code/BusMap/window/: MainWindow.h
programs/demo/Bus/code/BusMap/window/states/: PopupState.cpp  PopupState.h  StateDef.h
programs/demo/Bus/code/others/ETL/include/ui/: LabelCtrl.h
programs/demo/Bus/code/others/ETL/third/ATL/include/: atlbuild.h
programs/demo/Bus/code/others/ETL/third/ATL/lib/x64/: atls.lib
programs/demo/Bus/code/test/test-base/: BusViewModelTest.cpp  CMakeLists.txt
programs/demo/Bus/code/utility/: CMakeLists.txt
programs/demo/Bus/code/utility/common/: BusInfo.cpp  BusInfo.h  CommandParameter_ref.h  parameters.cpp  parameters.h
programs/demo/Bus/code/utility/model/: BusDataModel.h
programs/demo/Bus/code/utility/viewmodel/: BusViewModel.cpp  BusViewModel.h
programs/demo/Bus/code/utility/viewmodel/commands/: QueryCommand.cpp  QueryCommand.h
programs/demo/Bus/code/utility/viewmodel/sinks/: BusViewModelSink.cpp
programs/demo/Bus/doc/plan/: planning.md
programs/demo/Bus/doc/requirement/: requirement.md
programs/demo/Bus/doc/sprints/1/: cd.tex  (+2 more)
programs/demo/Pcolor/: CMakeLists.txt  LICENSE  README.md
programs/demo/Pcolor/cfg/: sample.txt
programs/demo/Pcolor/code/: CMakeLists.txt  main.cpp  precomp.cpp  precomp.h
programs/demo/Pcolor/code/app/: PcApp.cpp  PcApp.h
programs/demo/Pcolor/code/common/: PcCfg.cpp  PcCfg.h
programs/demo/Pcolor/code/model/: CfgModel.cpp  CfgModel.h  ColorModel.cpp  ColorModel.h
programs/demo/Pcolor/code/model/alg/: PcAlg.h
programs/demo/Pcolor/code/viewmodel/: ColorViewModel.cpp  ColorViewModel.h
programs/demo/Pcolor/code/viewmodel/commands/: LoadCfgCommand.cpp  LoadCfgCommand.h  LoadGrayImageCommand.cpp  LoadGrayImageCommand.h  ModifyColorPointCommand.cpp  ModifyColorPointCommand.h  SaveCfgCommand.cpp  SaveCfgCommand.h  SaveColorImageCommand.cpp  SaveColorImageCommand.h
programs/demo/Pcolor/code/viewmodel/sinks/: ColorViewModelSink.cpp  ColorViewModelSink.h
programs/demo/Pcolor/code/window/: MainWindow.cpp  MainWindow.h
programs/demo/Pcolor/code/window/sinks/: MainWindowCommandSink.cpp  MainWindowCommandSink.h  MainWindowPropertySink.cpp  MainWindowPropertySink.h
programs/demo/code/: CMakeLists.txt
programs/demo/code/BusMap/: CMakeLists.txt  main.cpp
programs/demo/code/BusMap/app/: BusApp.cpp  BusApp.h
programs/demo/code/BusMap/rc/: resource.h
programs/demo/code/BusMap/view/: BusLabel.cpp  BusLabel.h
programs/demo/code/BusMap/window/: MainWindow.cpp
programs/demo/code/BusMap/window/sinks/: MainWindowCommandSink.cpp  MainWindowCommandSink.h  MainWindowPropertySink.cpp  MainWindowPropertySink.h
programs/demo/code/BusMap/window/states/: CaptureState.cpp  CaptureState.h  PopupState.cpp  PopupState.h  StartState.cpp  StartState.h
programs/demo/code/others/ETL/: LICENSE
programs/demo/code/test/: CMakeLists.txt
programs/demo/code/test/test-base/: BusViewModelTest.cpp  BusViewModelTest.h  CMakeLists.txt  main.cpp
programs/demo/code/utility/: CMakeLists.txt
programs/demo/code/utility/common/: CommandParameter_ref.cpp
programs/demo/code/utility/model/: BusDataModel.cpp  BusDataModel.h
programs/demo/code/utility/viewmodel/sinks/: BusViewModelSink.h
programs/demo/doc/plan/: gantt.tex  planning.md
programs/demo/doc/plan/test/: test.md
programs/demo/doc/requirement/: requirement.md
programs/demo/doc/sprints/1/: cd.tex  sd.tex  states.tex
programs/demo/doc/sprints/public/: layers.tex
programs/demo/doc/technology/: techniques.md
programs/demo/others/ETL/: README.md
programs/demo/others/ETL/include/: msvc.cmk
slides/: 1.tex
slides/1/: 1.tex
slides/1/topics/: base.tex  team.tex
slides/2/: 2.tex
slides/2/topics/: framework.tex  process.tex
slides/3/: 3.tex
slides/3/topics/: optimization.tex  points.tex
(+34 files in other folders)
