CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
INCLUDE("../others/ETL/include/msvc.cmk")

PROJECT(PcolorDemo)

SET_ETL_PATH("${PROJECT_SOURCE_DIR}/../others/ETL")

ADD_SUBDIRECTORY(code code)

#pack
SET(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE")

SET(CPACK_PACKAGE_NAME "PcolorDemo")

SET(CPACK_PACKAGE_VENDER "ZJU")

SET(CPACK_PACKAGE_DIRECTORY "${PROJECT_BINARY_DIR}/_pack")

SET(CPACK_PACKAGE_VERSION_MAJOR "1")

SET(CPACK_PACKAGE_VERSION_MINOR "0")

SET(CPACK_PACKAGE_VERSION_PATCH "0")

INCLUDE(CPack)

#end
