CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
INCLUDE("others/etl/include/msvc.cmk")

PROJECT(Demo)

SET_ETL_PATH("${PROJECT_SOURCE_DIR}/others/ETL")

ADD_SUBDIRECTORY(BusMap BusMap)
ADD_SUBDIRECTORY(utility utility)
ADD_SUBDIRECTORY(test test)

ENABLE_TESTING()
ADD_TEST(NAME test-base COMMAND test-base)

#pack
SET(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE")

SET(CPACK_PACKAGE_NAME "Demo")

SET(CPACK_PACKAGE_VENDER "ZJU")

SET(CPACK_PACKAGE_DIRECTORY "${PROJECT_BINARY_DIR}/_pack")

SET(CPACK_PACKAGE_VERSION_MAJOR "1")

SET(CPACK_PACKAGE_VERSION_MINOR "0")

SET(CPACK_PACKAGE_VERSION_PATCH "0")

INCLUDE(CPack)

#end
