INCLUDE_DIRECTORIES(
	"${CMAKE_CURRENT_BINARY_DIR}"
	"${CMAKE_CURRENT_SOURCE_DIR}"
	"${PROJECT_SOURCE_DIR}/others/wtl/include"
	"${PROJECT_SOURCE_DIR}/others/etl/include"
	"${PROJECT_SOURCE_DIR}/utility"
	"${PROJECT_SOURCE_DIR}/test/test-base"
	)
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
SET(SRC_LIST "main.cpp" "BusViewModelTest.cpp")
ADD_EXECUTABLE(test-base ${SRC_LIST})
SET_TARGET_PROPERTIES(test-base PROPERTIES OUTPUT_NAME "test-base"
	LINK_FLAGS "${STRING_LINK_FLAGS_TARGET_C}")
TARGET_LINK_LIBRARIES(test-base utility)
